--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: AlphaBetaGamma
 description: Data Science Life
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://drive.google.com/file/d/1tG1_gzbe3zEOUIfTPROUCGIbVbUA0Brjyw/view?usp=sharing
 
 #
 # Flags below are optional
