--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: AlphaBetaGamma
 description: Data Science Life
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://drive.google.com/file/d/1tG1_gzbe3zEOUIfTPROUCGIbVbUA0Brjyw/view?usp=sharing
+avatar: https://github.com/qinglingni/qinglingni.github.io/blob/master/IMG_0939.jpg
 
 #
 # Flags below are optional
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/qinglingni
   instagram:
-  linkedin:
+  linkedin:https://www.linkedin.com/in/qingling-ni/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
