--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: AlphaBetaGamma
 description: Data Science Life
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/qinglingni/qinglingni.github.io/blob/master/IMG_0939.jpg
+avatar: https://github.com/qinglingni/qinglingni.github.io/blob/master/IMG_0939.jpg?raw=true
 
 #
 # Flags below are optional
